# auth_rs

./: .gitignore  Cargo.toml  README.md  config.json
sql/: up.sql
src/: error.rs  lib.rs  response.rs
src/auth/: config.rs  mod.rs  routes.rs
src/auth/services/: date_time_service.rs
src/auth/services/auth_service/: data_layer.rs  error.rs  mod.rs  models.rs
src/auth/services/send_email_service/: error.rs  mod.rs
src/auth/services/token_service/: error.rs  mod.rs
src/auth/services/verify_email_service/: data_layer.rs  error.rs  mod.rs
src/users/: routes.rs
src/users/services/user_service/: data_layer.rs  error.rs  mod.rs  models.rs
